<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:columnCount="2"
    android:rowCount="8"
    tools:context=".fragments.FragmentRegistro">

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_category"
        android:textSize="18dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <Spinner
        android:id="@+id/sp_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:minHeight="48dp"
        android:paddingBottom="15dp"
        android:layout_columnWeight="7"/>

    <ImageButton
        android:id="@+id/ib_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_box_24"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="3"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_concepto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:paddingBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_concepto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_concept" />

    </com.google.android.material.textfield.TextInputLayout>



    <EditText
        android:id="@+id/til_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:ems="10"
        android:inputType="date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:paddingBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<TextView
        android:id="@+id/tv_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tv_nombre_usuario"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="16dp"-->
<!--        android:layout_row="6"-->
<!--        android:layout_column="0"-->
<!--        android:paddingStart="10dp"-->
<!--        android:layout_columnSpan="2"/>

    <Spinner
        android:id="@+id/sp_usuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"/>-->

    <Button
        android:id="@+id/b_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/button_register" />

</GridLayout>